[package]
name = "wasm_video_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "FileReader",
  "File",
  "FileList",
  "Blob",
  "Url",
  "MediaSource",
  "SourceBuffer",
  "Window",
  "Event",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
